# llm-here

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SCHEMA.md  SECURITY.md  mkdocs.yml
.github/workflows/: ci.yml  docs.yml
crates/llm-here/: Cargo.toml
crates/llm-here-core/: Cargo.toml
crates/llm-here-core/src/: api.rs  detect.rs  dispatch.rs  env.rs  lib.rs  providers.rs  report.rs
crates/llm-here-core/tests/: api.rs  detect.rs  dispatch.rs
crates/llm-here/src/: main.rs
docs/: contributing.md  getting-started.md  index.md  roadmap.md
docs/commands/: detect.md  run.md
docs/integration/: consumers.md  python.md  rust.md
docs/reference/: env-vars.md  providers.md  schema.md
