[package]
name = "llm-here-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Detection + dispatch logic for LLM CLIs and API providers — the library half of llm-here"
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
which = { workspace = true }
wait-timeout = { workspace = true }
